--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ pip==21.3.1
 streamlit==0.84.0
 htbuilder==0.5.0
 spacy~=2.3.7
-en-core-web-md~=2.3.1
+pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz
